Add login and register function
